fix: use z-index same as dropdown for date-picker

--- a/docs/assets/styles/variables/z-indexes.css
+++ b/docs/assets/styles/variables/z-indexes.css
@@ -3,7 +3,6 @@
   --z-index-header: 1100;
   --z-index-footer: 1100;
   --z-index-dropdown: 2000;
-  --z-index-popover: 2000;
   --z-index-screen: 3000;
   --z-index-backdrop: 4000;
   --z-index-modal: 4010;
